--- a/packages.html
+++ b/packages.html
@@ -87,10 +87,15 @@
             </div>
             
             <footer>
-                <div class="icon">
-                    <a href='#'><img alt='Facebook' src='http://4.bp.blogspot.com/-oT7cL4u_dVM/UIS8ZW-7iZI/AAAAAAAAIrc/KepM5Y5sfSg/s1600/facebook.png'title='Facebook'/></a>
-                    <a href='#'><img alt='Twitter' src='http://1.bp.blogspot.com/-LXKaXH3z91E/UIS8k1pahQI/AAAAAAAAIsc/NhhtMdVeIsI/s1600/twitter.png'title='Twitter'/></a>
-                    <a href='#'><img alt='Youtube' src='http://2.bp.blogspot.com/-dOEUN9h6Brs/UIS8m8fY34I/AAAAAAAAIso/VueDWOdE4bo/s1600/youtube.png' title='Youtube'/></a>
+              <div class="icon">
+               <div class="cf">
+                <p>
+				Copyright 2017 by Rejuvenate & Go. All Rights reserved. All prices shown are in USD<br>
+			    </p> 
+			   </div> 
+                <a href='#'><img alt='Facebook' src='http://4.bp.blogspot.com/-oT7cL4u_dVM/UIS8ZW-7iZI/AAAAAAAAIrc/KepM5Y5sfSg/s1600/facebook.png'title='Facebook'/></a>
+                <a target="_blank" title="follow me on twitter" href="http://www.twitter.com/PLACEHOLDER"><img alt="follow me on twitter" src="//login.create.net/images/icons/user/twitter_30x30.png" border=0></a>
+                <a target="_blank" title="follow me on instagram" href="http://www.instagram.com/PLACEHOLDER"><img alt="follow me on instagram" src="https://c866088.ssl.cf3.rackcdn.com/assets/instagram30x30.png" border=0></a>
                 </div>
             </footer>
         </div>
